新增加購頁面
1.描述更改為編輯器
2.儲存提醒語 + 離開視窗
3.更改"展開"按鈕與提醒語
4.新增加購設定(popup顯示)

--- a/quickclick/menu-new-1.html
+++ b/quickclick/menu-new-1.html
@@ -19,7 +19,12 @@
                     返回菜單管理
                 </a>
             </h3>
-            <a class="btn-sort btn--primary-l">展開收起</a>
+            <!-- 列表展開 按鈕 + btn-sort-open -->
+            <a class="btn-sort btn--primary-l btn-sort-open">
+                <span class="tooltip">
+                    展開/收起列表。
+                </span>
+            </a>
             <div class="search-box">
                 <input class="default" type="text" placeholder="搜尋關鍵字">
             </div>
