--- a/quickclick/menu.html
+++ b/quickclick/menu.html
@@ -82,7 +82,7 @@
                         </ul>
                     </div>
                     <div class="logo">
-                        <img src="images/logo-quickclick.png">
+                        <img src="images/platform-logo/quickclick-m.png">
                     </div>
                     <div class="menu-title">
                         <input class="" type="" name="" value="假日菜單">
@@ -100,7 +100,7 @@
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                     <div class="logo">
-                        <img src="images/logo-foodpanda.png">
+                        <img src="images/platform-logo/foodpanda-m.png">
                     </div>
                     <div class="menu-title">
                         <input class="" type="" name="" value="" placeholder="點此新增菜單名稱">
@@ -115,7 +115,7 @@
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                     <div class="logo">
-                        <img src="images/logo-ubereats.png">
+                        <img src="images/platform-logo/ubereats-m.png">
                     </div>
                     <div class="menu-title">
                         <input class="" type="" name="" value="" placeholder="點此新增菜單名稱">
@@ -134,7 +134,7 @@
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                     <div class="logo">
-                        <img src="images/logo-quickclick.png">
+                        <img src="images/platform-logo/gofoodie-m.png">
                     </div>
                     <div class="menu-title">
                         <input class="" type="" name="" value="一到五的商業菜單" placeholder="點此新增菜單名稱">
@@ -155,7 +155,7 @@
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                     <div class="logo">
-                        <img src="images/logo-quickclick.png">
+                        <img src="images/platform-logo/counter-m.png">
                     </div>
                     <div class="menu-title">
                         <input class="" type="" name="" value="" placeholder="點此新增菜單名稱">
@@ -171,7 +171,7 @@
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                     <div class="logo">
-                        <img src="images/logo-quickclick.png">
+                        <img src="images/platform-logo/quickclick-m.png">
                     </div>
                     <div class="menu-title">
                         <input class="" type="" name="" value="" placeholder="點此新增菜單名稱">
