--- a/quickclick/menu-new.html
+++ b/quickclick/menu-new.html
@@ -19,7 +19,12 @@
                     返回菜單管理
                 </a>
             </h3>
-            <a class="btn-sort btn--primary-l">展開收起</a>
+            <!-- 列表展開 按鈕 + btn-sort-open -->
+            <a class="btn-sort btn--primary-l btn-sort-open">
+                <span class="tooltip">
+                    展開/收起列表。
+                </span>
+            </a>
             <div class="search-box">
                 <input class="default" type="text" placeholder="搜尋關鍵字">
             </div>
