--- a/quickclick/popup-delete-menu.html
+++ b/quickclick/popup-delete-menu.html
@@ -45,7 +45,7 @@
         <section class="middle-content">
             <div class="menu-list">
                 <div class="add-new-card">
-                    <a class="popup-link" href="#popup-add-menu">
+                    <a class="popup-link" href="add_new_menu.html">
                         <p>新增或匯入菜單</p>
                     </a>
                 </div>
@@ -71,32 +71,32 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="popup-link" href="#popup-delete-menu">
+                                <a class="popup-link" href="popup-delete-menu.html">
                                     <span><i class="far fa-trash-alt"></i></span>
                                     刪除
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="menu-history.html">
                                     <span><i class="fas fa-history"></i></span>
                                     歷史紀錄
                                 </a>
                             </li>
                             <li>
-                                <a class="popup-link" href="#popup-choose-store">
-                                    <span><i class="fas fa-share-square"></i></span>
+                                <a class="popup-link" href="popup-choose-store.html"">
+                                        <span><i class=" fas fa-share-square"></i></span>
                                     將此菜單複製到其他店
                                 </a>
                             </li>
                             <li>
-                                <a class="popup-link" href="#popup-choose-platform">
-                                    <span><i class="fas fa-share-square"></i></span>將此菜單上架到其他平台
+                                <a class="popup-link" href="popup-choose-platform.html"">
+                                        <span><i class=" fas fa-share-square"></i></span>將此菜單上架到其他平台
                                 </a>
                             </li>
                         </ul>
                     </div>
                     <div class="logo">
-                        <img src="images/logo-quickclick.png">
+                        <img src="images/platform-logo/quickclick-m.png">
                     </div>
                     <div class="menu-title">
                         <input class="" type="" name="" value="假日菜單">
@@ -114,7 +114,7 @@
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                     <div class="logo">
-                        <img src="images/logo-foodpanda.png">
+                        <img src="images/platform-logo/foodpanda-m.png">
                     </div>
                     <div class="menu-title">
                         <input class="" type="" name="" value="" placeholder="點此新增菜單名稱">
@@ -129,7 +129,7 @@
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                     <div class="logo">
-                        <img src="images/logo-ubereats.png">
+                        <img src="images/platform-logo/ubereats-m.png">
                     </div>
                     <div class="menu-title">
                         <input class="" type="" name="" value="" placeholder="點此新增菜單名稱">
@@ -148,7 +148,7 @@
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                     <div class="logo">
-                        <img src="images/logo-quickclick.png">
+                        <img src="images/platform-logo/gofoodie-m.png">
                     </div>
                     <div class="menu-title">
                         <input class="" type="" name="" value="一到五的商業菜單" placeholder="點此新增菜單名稱">
@@ -169,7 +169,7 @@
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                     <div class="logo">
-                        <img src="images/logo-quickclick.png">
+                        <img src="images/platform-logo/counter-m.png">
                     </div>
                     <div class="menu-title">
                         <input class="" type="" name="" value="" placeholder="點此新增菜單名稱">
@@ -185,7 +185,7 @@
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                     <div class="logo">
-                        <img src="images/logo-quickclick.png">
+                        <img src="images/platform-logo/quickclick-m.png">
                     </div>
                     <div class="menu-title">
                         <input class="" type="" name="" value="" placeholder="點此新增菜單名稱">
@@ -196,7 +196,7 @@
                     </div>
                     <p class="update">上次更新：昨天 下午 6:00 · Kay</p>
                 </div>
-            </div> 
+            </div>
         </section>
     </main>
 </body>
